pushing backend changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <script>
+        window.embeddedChatbotConfig = {
+          chatbotId: 'o1x236pDmzcc2EZ9hJFyO',
+          domain: 'www.chatbase.co',
+        };
+      </script>
+      <script
+        src="https://www.chatbase.co/embed.min.js"
+        chatbotId="o1x236pDmzcc2EZ9hJFyO"
+        domain="www.chatbase.co"
+        defer
+      ></script>
+    </div>
     <script>
       const global = globalThis;
     </script>
